// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 eQsGEI"
>
  18
</span>
`;

exports[`Counter w/ any props 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 eQsGEI className"
  id="Counter"
  title="title"
>
  18
</span>
`;

exports[`Counter w/ design: accent 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 cCaivE"
>
  18
</span>
`;

exports[`Counter w/ design: critical 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 dBmyGU"
>
  18
</span>
`;

exports[`Counter w/ design: disabled 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 iVMrQX"
>
  18
</span>
`;

exports[`Counter w/ design: neutral 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 eQsGEI"
>
  18
</span>
`;

exports[`Counter w/ design: success 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 igFKyr"
>
  18
</span>
`;

exports[`Counter w/ design: warning 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 kXEOzk"
>
  18
</span>
`;

exports[`Counter w/ position: absolute 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 lmpgYJ"
>
  18
</span>
`;

exports[`Counter w/ position: relative 1`] = `
<span
  class="Counterstyles__Box-oocehd-0 eQsGEI"
>
  18
</span>
`;
